﻿5/7/2015 0.8.10.0
  Dependency Updated: AE2 rv2 stable 1
  Version numbers simplified.
  Fixes #179: Export Bus now has void jar support.

4/8/2015 0.8.9.3a-rv2
  Dependency Updated: AE2 rv2 beta 27
  Fixes #160: More robust checking for disabled wrench
  Fixes #162: Updated AE2
  Better aspect registration & cleanup.
  
4/2/2015 0.8.9.2a-rv2
  Dependency Updated: AE2 rv2 beta 22

3/32/2015 0.8.9.1b-rv2
  Dependency Updated: Forge 10.13.2.1291
  Dependency Updated: Thaumcraft 4.2.3.5
  Dependency Updated: AE2 rv2 beta 18
  Fixes #145: Blocks now make sure their tile entity is valid before using them.
  Fixes #143: Removed essentia types are now properly ignored on launch.
  Fixes #133: Assembler AE-network connection initialization now protected.
  Fixes #129: Wrench focus disabled when quartz wrench has been disabled.
  Fixes #139: A.C.T. ignores right-clicks on the crafting result.
  Adds #138: Jar labels can be set in the essentia terminal.
  Added config option that controls if essentia gas can be used by ExtraCells.
  Fixed ItemFocusAEWrench init bug.
  Aspect registration is now protected from causing a crash.
  Merged language translation updates.
  Cleaned logging.
  Re-ballanced some recipes.
  Clarified Thaumonomicon entries.
  Essentia filter-slots can now be set by jar labels.
    
2/1/2015 0.8.9.0b-rv2
  Finished wrench focus recipe and lore
  Fixes #126: Added support for AE2-rv2-beta8
  
1/16/2015 0.8.9.0b-rv2
  Added support for cable parts to wrench focus.

1/15/2015 0.8.9.0b-rv2
  Fixes #122: Assembler will now connect to a network with a security terminal.
  Fixes #123: Added wrench focus.
  Began work on Essentia vibration chamber.

1/13/2015 0.8.8.4b-rv2
  Added forge version information to dependencies.
  Clarified permission API.
  Fixes #117: Added config option for gearbox models.
  Fixes #120: Assembler recipe now properly accepts a crafted scepter.
  Fixes #119: Assembler saves core and upgrades when wrenched.